# app/controllers.go
@@ -1,6 +1,6 @@
 // Code generated by goagen v1.3.0, DO NOT EDIT.
 //
-// API "cellar": Application Controllers
+// API "goa.learn": Application Controllers
 //
 // Command:
 // $ goagen
@@ -31,14 +31,15 @@ func initService(service *goa.Service) {
 	service.Decoder.Register(goa.NewJSONDecoder, "*/*")
 }
 
-// BottleController is the controller interface for the Bottle actions.
-type BottleController interface {
+// ArticleController is the controller interface for the Article actions.
+type ArticleController interface {
 	goa.Muxer
-	Show(*ShowBottleContext) error
+	List(*ListArticleContext) error
+	Show(*ShowArticleContext) error
 }
 
-// MountBottleController "mounts" a Bottle resource controller on the given service.
-func MountBottleController(service *goa.Service, ctrl BottleController) {
+// MountArticleController "mounts" a Article resource controller on the given service.
+func MountArticleController(service *goa.Service, ctrl ArticleController) {
 	initService(service)
 	var h goa.Handler
 
@@ -48,12 +49,27 @@ func MountBottleController(service *goa.Service, ctrl BottleController) {
 			return err
 		}
 		// Build the context
-		rctx, err := NewShowBottleContext(ctx, req, service)
+		rctx, err := NewListArticleContext(ctx, req, service)
+		if err != nil {
+			return err
+		}
+		return ctrl.List(rctx)
+	}
+	service.Mux.Handle("GET", "/article", ctrl.MuxHandler("list", h, nil))
+	service.LogInfo("mount", "ctrl", "Article", "action", "List", "route", "GET /article")
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		// Check if there was an error loading the request
+		if err := goa.ContextError(ctx); err != nil {
+			return err
+		}
+		// Build the context
+		rctx, err := NewShowArticleContext(ctx, req, service)
 		if err != nil {
 			return err
 		}
 		return ctrl.Show(rctx)
 	}
-	service.Mux.Handle("GET", "/bottles/:bottleID", ctrl.MuxHandler("show", h, nil))
-	service.LogInfo("mount", "ctrl", "Bottle", "action", "Show", "route", "GET /bottles/:bottleID")
+	service.Mux.Handle("GET", "/article/:id", ctrl.MuxHandler("show", h, nil))
+	service.LogInfo("mount", "ctrl", "Article", "action", "Show", "route", "GET /article/:id")
 }
