# app/media_types.go
@@ -1,6 +1,6 @@
 // Code generated by goagen v1.3.0, DO NOT EDIT.
 //
-// API "cellar": Application Media Types
+// API "goa.learn": Application Media Types
 //
 // Command:
 // $ goagen
@@ -14,26 +14,40 @@ import (
 	"github.com/goadesign/goa"
 )
 
-// A bottle of wine (default view)
+// Article (default view)
 //
-// Identifier: application/vnd.goa.example.bottle+json; view=default
-type GoaExampleBottle struct {
-	// API href for making requests on the bottle
-	Href string `form:"href" json:"href" xml:"href"`
-	// Unique bottle ID
+// Identifier: application/vnd.article+json; view=default
+type Article struct {
+	// 作成者
+	CreatedBy *int `form:"created_by,omitempty" json:"created_by,omitempty" xml:"created_by,omitempty"`
+	// ID
 	ID int `form:"id" json:"id" xml:"id"`
-	// Name of wine
-	Name string `form:"name" json:"name" xml:"name"`
+	// text
+	Text string `form:"text" json:"text" xml:"text"`
 }
 
-// Validate validates the GoaExampleBottle media type instance.
-func (mt *GoaExampleBottle) Validate() (err error) {
+// Validate validates the Article media type instance.
+func (mt *Article) Validate() (err error) {
 
-	if mt.Href == "" {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "href"))
+	if mt.Text == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "text"))
 	}
-	if mt.Name == "" {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "name"))
+	return
+}
+
+// ArticleCollection is the media type for an array of Article (default view)
+//
+// Identifier: application/vnd.article+json; type=collection; view=default
+type ArticleCollection []*Article
+
+// Validate validates the ArticleCollection media type instance.
+func (mt ArticleCollection) Validate() (err error) {
+	for _, e := range mt {
+		if e != nil {
+			if err2 := e.Validate(); err2 != nil {
+				err = goa.MergeErrors(err, err2)
+			}
+		}
 	}
 	return
 }
