# design/design.go
@@ -5,39 +5,64 @@ import (
 	. "github.com/goadesign/goa/design/apidsl"
 )
 
-var _ = API("cellar", func() { // API defines the microservice endpoint and
-	Title("The virtual wine cellar")    // other global properties. There should be one
-	Description("A simple goa service") // and exactly one API definition appearing in
-	Scheme("http")                      // the design.
+var _ = API("goa.learn", func() {
+	Title("goa learn")
+	Description("learning goa")
+	Scheme("http")
 	Host("localhost:8080")
 })
 
-var _ = Resource("bottle", func() { // Resources group related API endpoints
-	BasePath("/bottles")      // together. They map to REST resources for REST
-	DefaultMedia(BottleMedia) // services.
-	Action("show", func() {   // Actions define a single API endpoint together
-		Description("Get bottle by id") // with its path, parameters (both path
-		Routing(GET("/:bottleID"))      // parameters and querystring values) and payload
-		Params(func() {                 // (shape of the request body).
-			Param("bottleID", Integer, "Bottle ID")
+var Article = MediaType("application/vnd.article+json", func() {
+	Description("Article")
+	Attributes(func() {
+		Attribute("id", Integer, "ID", func() {
+			Example(1)
 		})
-		Response(OK)       // Responses define the shape and status code
-		Response(NotFound) // of HTTP responses.
+		Attribute("text", String, "text", func() {
+		})
+		Attribute("created_by", Integer, "作成者", func() {
+			Example(1)
+		})
+		Required("id", "text")
+	})
+	View("default", func() {
+		Attribute("id")
+		Attribute("text")
+		Attribute("created_by")
 	})
 })
 
-// BottleMedia defines the media type used to render bottles.
-var BottleMedia = MediaType("application/vnd.goa.example.bottle+json", func() {
-	Description("A bottle of wine")
-	Attributes(func() { // Attributes define the media type shape.
-		Attribute("id", Integer, "Unique bottle ID")
-		Attribute("href", String, "API href for making requests on the bottle")
-		Attribute("name", String, "Name of wine")
-		Required("id", "href", "name")
+var _ = Resource("article", func() {
+	BasePath("/article")
+	DefaultMedia(Article)
+	Action("show", func() {
+		Description("Get arcitle by id")
+		Routing(GET("/:id"))
+		Params(func() {
+			Param("id", Integer, "id", func() {
+				Minimum(1)
+			})
+		})
+		Response(OK, func() {
+			Media(Article, "default")
+		})
+		Response(NotFound)
 	})
-	View("default", func() { // View defines a rendering of the media type.
-		Attribute("id")   // Media types may have multiple views and must
-		Attribute("href") // have a "default" view.
-		Attribute("name")
+
+	Action("list", func() {
+		Routing(
+			GET(""),
+		)
+		Description("List")
+		Params(func() {
+			Param("id", ArrayOf(Integer), "Filter by ids")
+		})
+		Response(OK, func() {
+			Media(CollectionOf(Article, func() {
+				View("default")
+			}))
+		})
+		Response(NotFound)
+		Response(BadRequest, ErrorMedia)
 	})
 })
