# swagger/swagger.yaml
@@ -4,62 +4,148 @@ consumes:
 - application/gob
 - application/x-gob
 definitions:
-  GoaExampleBottle:
-    description: A bottle of wine (default view)
+  Article:
+    description: Article (default view)
     example:
-      href: Voluptates non excepturi.
-      id: 6.9965735e+18
-      name: Tenetur et saepe ratione debitis enim sapiente.
+      created_by: 1
+      id: 1
+      text: Iure voluptatem.
     properties:
-      href:
-        description: API href for making requests on the bottle
-        example: Voluptates non excepturi.
-        type: string
-      id:
-        description: Unique bottle ID
-        example: 6.9965735e+18
+      created_by:
+        description: 作成者
+        example: 1
         format: int64
         type: integer
-      name:
-        description: Name of wine
-        example: Tenetur et saepe ratione debitis enim sapiente.
+      id:
+        description: ID
+        example: 1
+        format: int64
+        type: integer
+      text:
+        description: text
+        example: Iure voluptatem.
         type: string
     required:
     - id
-    - href
-    - name
-    title: 'Mediatype identifier: application/vnd.goa.example.bottle+json; view=default'
+    - text
+    title: 'Mediatype identifier: application/vnd.article+json; view=default'
+    type: object
+  ArticleCollection:
+    description: ArticleCollection is the media type for an array of Article (default
+      view)
+    example:
+    - created_by: 1
+      id: 1
+      text: Iure voluptatem.
+    - created_by: 1
+      id: 1
+      text: Iure voluptatem.
+    - created_by: 1
+      id: 1
+      text: Iure voluptatem.
+    items:
+      $ref: '#/definitions/Article'
+    title: 'Mediatype identifier: application/vnd.article+json; type=collection; view=default'
+    type: array
+  error:
+    description: Error response media type (default view)
+    example:
+      code: invalid_value
+      detail: Value of ID must be an integer
+      id: 3F1FKVRR
+      meta:
+        timestamp: 1.458609e+09
+      status: "400"
+    properties:
+      code:
+        description: an application-specific error code, expressed as a string value.
+        example: invalid_value
+        type: string
+      detail:
+        description: a human-readable explanation specific to this occurrence of the
+          problem.
+        example: Value of ID must be an integer
+        type: string
+      id:
+        description: a unique identifier for this particular occurrence of the problem.
+        example: 3F1FKVRR
+        type: string
+      meta:
+        additionalProperties: true
+        description: a meta object containing non-standard meta-information about
+          the error.
+        example:
+          timestamp: 1.458609e+09
+        type: object
+      status:
+        description: the HTTP status code applicable to this problem, expressed as
+          a string value.
+        example: "400"
+        type: string
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
     type: object
 host: localhost:8080
 info:
-  description: A simple goa service
-  title: The virtual wine cellar
+  description: learning goa
+  title: goa learn
   version: ""
 paths:
-  /bottles/{bottleID}:
+  /article:
     get:
-      description: Get bottle by id
-      operationId: bottle#show
+      description: List
+      operationId: article#list
       parameters:
-      - description: Bottle ID
-        in: path
-        name: bottleID
-        required: true
-        type: integer
+      - description: Filter by ids
+        in: query
+        items:
+          type: integer
+        name: id
+        required: false
+        type: array
       produces:
-      - application/vnd.goa.example.bottle+json
+      - application/vnd.goa.error
+      - application/vnd.article+json; type=collection
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/GoaExampleBottle'
+            $ref: '#/definitions/ArticleCollection'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
         "404":
           description: Not Found
       schemes:
       - http
-      summary: show bottle
+      summary: list article
       tags:
-      - bottle
+      - article
+  /article/{id}:
+    get:
+      description: Get arcitle by id
+      operationId: article#show
+      parameters:
+      - description: id
+        in: path
+        minimum: 1
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/vnd.article+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Article'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      summary: show article
+      tags:
+      - article
 produces:
 - application/json
 - application/xml
@@ -68,10 +154,6 @@ produces:
 responses:
   NotFound:
     description: Not Found
-  OK:
-    description: OK
-    schema:
-      $ref: '#/definitions/GoaExampleBottle'
 schemes:
 - http
 swagger: "2.0"
